[package]
name = "bybit-hedger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
hmac = "0.12.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
rust_decimal = "1.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
